number method for ids in singleCard, inputbox styled, detailcard styled

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     --color-text-inner: #FFCB05;
     --color-text-outer: #2C72B8;
     --color-background: #E3EEF1;
+    --color-background-dark: #1D2C5E;
 
     --color-bug: #3BB900;
     --color-dark: #1C1C1C;
