--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
     --color-fire: #FF9900;
     --color-flying: #CCDADD;
     --color-ghost: #5A1E64;
-    --color-gras: #57921C;
+    --color-grass: #57921C;
     --color-ground: #965A00;
     --color-ice: #6AD2FF;
     --color-normal: #B3B3B3;
